# 3d-Scanning

./: .gitignore
exe2/exercise_2_src/exercise_2_src/: ImplicitSurface.h
exe3/exercise_3_src/: ProcrustesAligner.h
exe4/exercise_4_src/exercise_4_src/: dragon  dragon.cpp  gaussian.cpp
final/reconstruction/: CMakeLists.txt  FindEssentialMatrix.cpp  README.md  RecoverRT.cpp  bundle_adjustment.cpp  helper.cpp  include.h  kitti_kit.cpp  main.cpp  matching.cpp  orb.cpp  pointcloud.cpp  rectify.cpp  sgbm.cpp  sift.cpp  test.cpp  transformation.py  undistort.cpp
